연봉, 별점순 정렬 옵션 div 추가

--- a/major.css
+++ b/major.css
@@ -211,11 +211,15 @@ input, button, textarea, select, optgroup, option {
     background-color: #6d82f3;
 }
 
-.sri_select {
-    display: inline-block;
-    position: relative;
-    height: 32px;
-    color: #444;
+.major_list_wrap .add_option {
+    position: absolute;
+    top: 38px;
+    right: 0;
+    width: 100px;
+    padding-right: 18px;
+}
+
+.add_option .sri_select {
     font-size: 13px;
-    vertical-align: middle;
+    color : #555;
 }
