워드클라우드 div 삭제

--- a/cloud computing/WebContent/CSS/tbody.css
+++ b/cloud computing/WebContent/CSS/tbody.css
@@ -99,9 +99,9 @@ a:-webkit-any-link {
     font-size: 13px;
 }
 
-.common_recruit_list .word_cloud {
+/*.common_recruit_list .word_cloud {
     padding-top: 10px;
-}
+}*/
 
 .common_recruit_list .source_site {
     padding-top: 15px;
