--- a/jobkoreaSuccess/jobkoreaSuccessServer/views/spec.ejs
+++ b/jobkoreaSuccess/jobkoreaSuccessServer/views/spec.ejs
@@ -93,7 +93,7 @@
                 <input type="number" class="form-control" aria-label="Recipient's username"
                     aria-describedby="basic-addon2" step=any id="oversea" name="oversea">
                 <div class="input-group-append">
-                    <span class="input-group-text" >개</span>
+                    <span class="input-group-text" >번</span>
                 </div>
             </div>
 
@@ -150,7 +150,7 @@
     }
 
     .title {
-        font-size: 30px !important;
+        font-size: 30px;
         font-weight: 600;
         margin-bottom: 20px;
     }
